fixed profile wrapper and some nav on mobile format

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -165,7 +165,7 @@
   padding-top: 35px;
   margin: 10px auto;
   width: 50%;
-  height: 400px;
+  height: 425px;
   text-align: center;
 }
 
